[package]
name = "tokio-rustls-acme"
version = "0.2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "Florian Uekermann <florian@uekermann.me>"]
edition = "2018"
description = "Automatic TLS certificate management using rustls"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/n0-computer/tokio-rustls-acme"
documentation = "https://docs.rs/tokio-rustls-acme"
keywords = ["acme", "rustls", "tls", "letsencrypt"]
categories = ["asynchronous", "cryptography", "network-programming"]

[dependencies]
futures = "0.3.21"
rcgen = "0.12"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
ring = { version = "0.17", features = ["std"] }
base64 = "0.21.0"
log = "0.4.17"
webpki-roots = "0.26"
pem = "2.0"
thiserror = "1.0.31"
x509-parser = "0.15"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
url = "2.2.2"
async-trait = "0.1.53"
rustls = "0.23"

tokio = { version = "1.20.1", default-features = false }
tokio-rustls = { version = "0.26" }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }

# Axum
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

[dev-dependencies]
simple_logger = "4.1"
structopt = "0.3.26"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version="1.19.2", features = ["full"] }
tokio-stream = { version="0.1.9", features = ["net"] }
tokio-util = { version="0.7.3", features = ["compat"] }
warp = "0.3.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_auto_cfg"]

[features]
default = []
axum = ["dep:axum-server"]

[[example]]
name="low_level_axum"
required-features=["axum"]

[[example]]
name="high_level_warp"

[[example]]
name="high_level"

[[example]]
name="low_level"
